--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "chakra-react-select": "^6.1.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
@@ -26,6 +28,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-select": "^5.10.2",
     "react-spinners": "^0.17.0",
     "react-time-picker": "^7.0.0"
   },
