--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,10 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-select": "^5.10.2",
+    "react-slick": "^0.31.0",
     "react-spinners": "^0.17.0",
-    "react-time-picker": "^7.0.0"
+    "react-time-picker": "^7.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -38,6 +40,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.30.1",
