--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
+    "razorpay": "^2.9.6",
     "winston": "^3.17.0"
   }
 }
