--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "workspaces":["services/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "dev": "nodemon server.js"
+    "dev:all": "npm run dev:user & npm run dev:shop & npm run dev:payment & npm run dev:booking & npm run dev:support",
+    "dev:user": "npm run dev -w user-service",
+    "dev:shop": "npm run dev -w shop-service",
+    "dev:payment": "npm run dev -w payment-service",
+    "dev:booking": "npm run dev -w booking-service",
+    "dev:support": "npm run dev -w support-service"
   },
   "keywords": [],
   "author": "",
