--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,13 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "workspaces":["services/*"],
+  "workspaces": [
+    "services/*"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "node server.js",
-    "dev:all": "npm run dev:user & npm run dev:shop & npm run dev:payment & npm run dev:booking & npm run dev:support",
+    "dev:all": "concurrently \"npm run dev:user\" \"npm run dev:shop\" \"npm run dev:payment\" \"npm run dev:booking\" \"npm run dev:support\"",
     "dev:user": "npm run dev -w user-service",
     "dev:shop": "npm run dev -w shop-service",
     "dev:payment": "npm run dev -w payment-service",
@@ -30,5 +32,8 @@
     "morgan": "^1.10.1",
     "razorpay": "^2.9.6",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1"
   }
 }
